--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="text">I'm Yatin and I'm a <span class="typing-2"></span></div>
                     <p>Hi guys, What's up</p>
                     <p>I am just a normal guy completing graduation from Indian Institute of Technology, Ropar in Mechanical Engineering. Well apart from normal coursework I have done some certified courses on Machine Learning and Data Structures & Algorithms. I also have done a little bit of web development. Also for fun I do photography, I also enjoy making artworks on photoshop, do video editing on premier pro, do cycling, play keyboard and many more. </p>
-                    <a href="docs/Yatin_s_resume.pdf">Download Resume</a>
+                    <a href="docs/SDE_Final.pdf">Download Resume</a>
                 </div>
             </div>
         </div>
